Fixed alignment issues

--- a/luna-frontend/src/Components/Sidebar/Sidebar.css
+++ b/luna-frontend/src/Components/Sidebar/Sidebar.css
@@ -2,13 +2,11 @@
     padding-top:10px;
 }
 .sidebar {
-    overflow:hidden;
+    overflow:auto;
     position: fixed;
-    top:7.5%;
-    left: 0;
     background-color: #003248;
-    width: 15%;
-    height: 100vh;
+    width: 15vw;
+    height: 100%;
     font-size: 20px;
 }
 .Sidebar-buttons{
