--- a/luna-frontend/src/Components/styles.css
+++ b/luna-frontend/src/Components/styles.css
@@ -1,42 +1,3 @@
-/* .sidebar {
- 
-    box-shadow:4px 7px 10px rgba(25, 188, 166, 0.4);
-    
-} */
-
-/* Sidebar styles */
-
-.sidebar {
-    width: 200px; 
-    background-color: #1fc6cc;
-    height: 100vh;
-    font-size: 20px;
-    padding: 20px; /* Add some padding to the sidebar */
-  }
-  
-
-  .sidebar a {
-    display:flow-root;
-    padding: 10px; 
-    color: rgb(102, 102, 102); 
-    text-decoration:double;
-  }
-  
-  .sidebar a:hover {
-    background-color: #ccc; 
-  }
-  
-  
-  .main-content {
-    margin-left: 200px;
-    padding: 20px; 
-  }
-  
-
-.lower {
-    display: flex;
-}
-
 .challan-card, .withdraw-card, .grade-card {
     margin-top: 20px;
 }
@@ -94,13 +55,6 @@
 .assignment-card .description {
     width: 80%;
 }
-
-
-.layout {
-    display: block;
-}
-
-
 
 .nav-tabs .nav-link {
     color: white;
